fix(hero_select): third team isn't visible on desert_octet map
Fixes #27.

--- a/content/panorama/styles/custom_game/multiteam_hero_select_overlay.css
+++ b/content/panorama/styles/custom_game/multiteam_hero_select_overlay.css
@@ -8,16 +8,21 @@
 #HeroSelectTeamsContainer
 {
 	width: 100%;
-	height: 210px;
 	horizontal-align: center;
-	margin-top: 30px;
-	margin-bottom: 5px;
-	flow-children: right;
+	margin-top: 10px;
+	flow-children: down;
 }
 
 .AspectRatio4x3 #HeroSelectTeamsContainer
 {
-	margin-top: 50px;
+	margin-left: 50px;
+}
+
+#HeroSelectTeamsContainer > Panel
+{
+	width: 100%;
+	flow-children: right;
+	margin-bottom: 3px;
 }
 
 #TimerPanel
@@ -84,7 +89,6 @@
 {
     horizontal-align: center;
     flow-children: right;
-    height: 110px;
 }
 
 .local_player_team #PlayerPortraitsOverlay
@@ -94,13 +98,9 @@
     box-shadow: fill #ffffff80 -3px -3px 3px 6px;
 }
 
-#EndSpacer
+.EndSpacer
 {
     width: fill-parent-flow(1);
-}
-
-#Spacer
-{
 }
 
 .HeroSelectPlayerRoot
